flux/infra/openclaw-agent-claw/https-redirect-middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-middleware
  namespace: openclaw-operator
spec:
  redirectScheme:
    scheme: https
    permanent: true
